--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,120 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+ 
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+ 
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+ 
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+ 
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+ 
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+ 
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+ 
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+ 
+    --radius: 0.5rem;
+  }
+ 
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+ 
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+ 
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+ 
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+ 
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+ 
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+ 
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+ 
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+ 
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
   }
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+ 
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+  .text-shikam-degrade {
+    @apply bg-gradient-to-r from-shikam-clair to-shikam-normal bg-clip-text text-transparent;
+  }
+  .bg-shikam-degrade {
+    @apply bg-gradient-to-r from-shikam-clair to-shikam-normal;
+  }
+  .text-shikam-degrade-fonce {
+    @apply bg-gradient-to-r from-shikam-fonce to-shikam-normal bg-clip-text text-transparent;
+  }
+  .bg-shikam-degrade-fonce {
+    @apply bg-gradient-to-tr from-shikam-fonce to-shikam-normal;
+  }
+  .text-shikam-degrade-blanc {
+    @apply bg-gradient-to-r from-white to-shikam-clair bg-clip-text text-transparent;
+  }
+  .bg-shikam-degrade-blanc {
+    @apply bg-gradient-to-tr from-white to-shikam-clair;
+  }
+  .section-padding {
+    @apply xl:px-52 md:px-20 sm:px-10 px-4;
+    
+  }
+  /* h1, h2, h3, h4, h5, h6 {
+    @apply !leading-tight;
+  } */
+  p {
+    @apply mb-4;
   }
 }
+.shadow-light {
+  box-shadow: 0 3px 24px rgb(0 0 0 / 10%);
+}
+
+.circle.left.desktop {
+  /* @apply content-[''] block h-20 w-20 text-xl border-2 border-shikam-normal rounded-full absolute opacity-[0.5] -mt-5 shadow-[0px 0px 0.1em rgb(8, 96, 214)] inset-[0px 0px 0.1em rgb(8, 96, 214)]; */
+  /* font-size: 4.5rem;
+  border: 2px solid var(--mega-tertiary);
+  border-radius: 100%;
+  box-shadow: 0px 0px 0.1em var(--mega-tertiary), inset 0px 0px 0.1em var(--mega-tertiary);
+  position: absolute;
+  filter: opacity(0.5);
+  margin-top: -0.5em; */
+  /* left: calc((100% - 1440px) / 2 + 0.5em); */
+}
+
